Fixed Alignment of project search bar

--- a/Frontend/mainPage/style.css
+++ b/Frontend/mainPage/style.css
@@ -1219,8 +1219,8 @@ button:hover {
   }
 
   #searchBar {
-    width: 80%;
-    max-width: 400px;
+    width: 69%;
+    /* max-width: 400px; */
     padding: 10px;
     font-size: 16px;
     border: 2px solid #ccc;
